<resources>
  <string name="app_name">UniVerse</string>
</resources>
